# haiq

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  example-config.json  haiq.pro  icons.qrc  qml.qrc  sounds.qrc
.github/workflows/: build_qmake.yml
android/: AndroidManifest.xml  build.gradle
android/gradle/wrapper/: gradle-wrapper.properties
android/src/org/griebl/haiq/: OpenUrlClient.java
debian/: control  copyright  rules
icons/: COPYING-ICONS
macos/: Info.plist  haiq.icns
qml/: AlarmPage.qml  BedsideAlarm.qml  BedsideDayPicker.qml  BedsidePage.qml  BedsideSelectPlayer.qml  BedsideTimePicker.qml  BedsideView.qml  BlindsControl.qml  BrowserPage.qml  CalendarEvents.qml  ColorSettings.qml  CurveLine.qml  DialButton.qml  DigitalClock.qml  DimmerControl.qml  FPSMeter.qml  FireFoxPage.qml  GoogleMapsDistance.qml  HereMapsDistance.qml  HomeAssistantPage.qml  IncomingCall.qml  KitchenMail.qml  KitchenPage.qml  KitchenTimer.qml  KitchenTrashIcon.qml  KitchenView.qml  LivingRoomLaptopView.qml  LivingRoomPage.qml  LivingRoomPage2.qml  LivingRoomView.qml  MenuDrawer.qml  OfficeView.qml  PrinterView.qml  PullToRefreshListHeader.qml  RoundIconButton.qml  SceneButton.qml  SceneLabel.qml  SceneSlider.qml  SceneSpinBox.qml  Setup.qml  (+19 more)
scripts/: git-release.sh
src/: CMakeLists.txt  appstarter.cpp  appstarter.h  configuration.cpp  configuration.h  exception.cpp  exception.h  main.cpp  openurlclient.cpp  openurlclient.h  qml_registration.cpp  qml_registration.h  src.pri  version.h.in
src/calendar/: calendar.cpp  calendar.h  calendar.pri  icalendarparser.cpp  icalendarparser.h
src/homeassistant/: homeassistant.cpp  homeassistant.h  homeassistant.pri
src/qml/: AlarmPage.qml  BedsideAlarm.qml  BedsideDayPicker.qml  BedsidePage.qml  BedsideSelectPlayer.qml  BedsideTimePicker.qml  BedsideView.qml  BlindsControl.qml  BrowserPage.qml  CMakeLists.txt  CalendarEvents.qml  ColorSettings.qml  CurveLine.qml  DarkOverlay.qml  DialButton.qml  DigitalClock.qml  DimmerControl.qml  FPSMeter.qml  GoogleMapsDistance.qml  HereMapsDistance.qml  HomeAssistantPage.qml  IncomingCall.qml  KitchenMail.qml  KitchenPage.qml  KitchenTimer.qml  KitchenTrashIcon.qml  KitchenView.qml  LivingRoomLaptopView.qml  LivingRoomPage.qml  LivingRoomPage2.qml  LivingRoomView.qml  MenuDrawer.qml  OfficeView.qml  PrinterView.qml  PullToRefreshListHeader.qml  RoundIconButton.qml  SceneButton.qml  SceneLabel.qml  SceneSlider.qml  SceneSpinBox.qml  (+18 more)
src/qtsingleapplication/: qtlocalpeer.cpp  qtsingleapplication.pri
src/screenbrightness/: screenbrightness.cpp  screenbrightness.h  screenbrightness.pri
src/squeezebox/: squeezebox.pri  squeezeboxserver.cpp  squeezeboxserver.h
src/xbrowsersync/: aes.c  aes.h  gcm.c  gcm.h  lzutf8.cpp  lzutf8.h  xbrowsersync.cpp  xbrowsersync.h  xbrowsersync.pri
unix/: org.griebl.HAiQ.desktop
utils/: git-release.sh  haiq.service
windows/: haiq.iss  haiq.rc.in
